# centurion

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
centurion/: CMakeLists.txt  main.cpp
centurion-library/assets/: CMakeLists.txt  xml_assets.cpp  xml_assets.h  xml_class.cpp  xml_class.h  xml_class_command.cpp  xml_class_command.h  xml_class_enums.h  xml_class_method.cpp  xml_class_method.h  xml_classes.cpp  xml_classes.h  xml_entity.cpp  xml_entity.h  xml_entity_image.cpp  xml_entity_image.h  xml_entity_layer.cpp  xml_entity_layer.h  xml_entity_shader.cpp  xml_entity_shader.h  xml_entity_structs.h  xml_script.cpp  xml_script.h  xml_scripts.cpp  xml_scripts.h  xml_typedef.h  xml_value.cpp  xml_value.h  xml_values.cpp  xml_values.h
centurion-library/engine/: CMakeLists.txt  centurion_typedef.hpp  debugUi.cpp  debugUi.h  engine.cpp  engine.h  header.h  settings.cpp  settings.h
centurion-library/engine/environments/: file_save_info.cpp  file_save_info.h  ienvironment.cpp  ienvironment.h
centurion-library/engine/environments/game/: game_pipeline.cpp  game_pipeline.h  game_time.cpp  game_time.h  igame.cpp  igame.h  igameUi.cpp  igameUi.h  tlv_types.h
centurion-library/engine/environments/game/adventure/: adventure.cpp  adventure.h
centurion-library/engine/environments/game/adventure/scenario/: area.cpp  (+7 more)
centurion-library/engine/environments/game/classes/: building.cpp  building.h  decoration.cpp  decoration.h  gobject.cpp  gobject.h  hero.cpp  hero.h  playable.cpp  playable.h  unit.cpp  unit.h  wagon.cpp  wagon.h
centurion-library/engine/environments/game/editor/: addObjectWindow.cpp  addObjectWindow.h  editor.cpp  editor.h  editorUi.cpp  editorUi.h  editor_pipeline.cpp  editor_pipeline.h
centurion-library/engine/environments/game/match/: match.cpp  match.h  match_pipeline.cpp  match_pipeline.h
centurion-library/engine/environments/game/races/: race.cpp  race.h  races_interface.cpp  races_interface.h
centurion-library/engine/environments/menu/: menu.cpp  menu.h
centurion-library/engine/framebuffers/: framebuffer.cpp  framebuffer.h  shadows_fb.cpp  shadows_fb.h
centurion-library/engine/game/interface/: loading_screen.cpp  loading_screen.h
centurion-library/engine/mds/: mds.cpp  mds.h
centurion-library/engine/players/: color.cpp  color.h  colors_array.cpp  colors_array.h  diplomacy.cpp  diplomacy.h  player.cpp  player.h  players_array.cpp  players_array.h
centurion-library/engine/services/: logservice.cpp  logservice.h  oggservice.cpp  oggservice.h  pyservice.cpp  pyservice.h  sqlservice.cpp  sqlservice.h
centurion-library/gui/: CMakeLists.txt  dialogWindows.cpp  dialogWindows.h  iframeSkinCollection.cpp  iframeSkinCollection.h  menubar.cpp  menubar.h  shortcuts.cpp  shortcuts.h  ui.cpp  ui.h
centurion-library/gui/iframe/: iframe.cpp  iframe.h  imguiBufferingBar.cpp  imguiBufferingBar.h  imguiCheckBox.cpp  imguiCheckBox.h  imguiColorPicker.cpp  imguiColorPicker.h  imguiComboBox.cpp  imguiComboBox.h  imguiEditorTree.cpp  imguiEditorTree.h  imguiElement.cpp  imguiElement.h  imguiElementWithOptions.cpp  imguiElementWithOptions.h  imguiImage.cpp  imguiImage.h  imguiImageButton.cpp  imguiImageButton.h  imguiInputInt.cpp  imguiInputInt.h  imguiMultipleChoice.cpp  imguiMultipleChoice.h  imguiProgressBar.cpp  imguiProgressBar.h  imguiSlider.cpp  imguiSlider.h  imguiSpinner.cpp  imguiSpinner.h  imguiText.cpp  imguiText.h  imguiTextInput.cpp  imguiTextInput.h  imguiTextInputMultiline.cpp  imguiTextInputMultiline.h  imguiTextList.cpp  imguiTextList.h  imguiTextWrapped.cpp  imguiTextWrapped.h  (+3 more)
centurion-library/imgui/: CMakeLists.txt  ImFileDialog.cpp  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_truetype.h
centurion-library/util/: CMakeLists.txt  bin_data_interpreter.cpp  bin_data_interpreter.h  binary_file_reader.cpp  binary_file_reader.h  binary_file_writer.cpp  binary_file_writer.h  custom_exceptions.hpp  duration_logger.cpp  duration_logger.h  icons.h  imgui_utils.cpp  imgui_utils.h  memory_logger.cpp  memory_logger.h  thread_guard.cpp  thread_guard.h  tinyxml2_utils.cpp  tinyxml2_utils.h
centurion-library/util/stl_extention/: fibonacci_heap.h
centurion/exe-root-content/: Settings.xml
centurion/exe-root-content/assets/: pass.txt
centurion/exe-root-content/fonts/: fonts.xml
centurion/exe-root-content/logs/durationlogger/: durationlogger.json
centurion/exe-root-content/shaders/: circle_fragment_shader.glsl  circle_vertex_shader.glsl  clouds_fragment_shader.glsl  clouds_vertex_shader.glsl  entity_fragment_shader.glsl  entity_vertex_shader.glsl  rectangle_fragment_shader.glsl  rectangle_vertex_shader.glsl  sea_fragment_shader.glsl  sea_vertex_shader.glsl  shadow_fb_fragment_shader.glsl  shadow_fb_vertex_shader.glsl  terrainchunk_fragment_shader.glsl  terrainchunk_vertex_shader.glsl
rattlesmake-library/rattlesmake-geometry-library/: CMakeLists.txt  circle_shader.cpp  circle_shader.h  rectangle_shader.cpp  rectangle_shader.h
rattlesmake-library/rattlesmake-image-library/: CMakeLists.txt  png.cpp  png.h  png_shader.cpp  png_shader.h  stb_wrap.cpp  stb_wrap.h
rattlesmake-library/rattlesmake-peripherals-library/: CMakeLists.txt  camera.cpp  camera.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  user_input.cpp  user_input.h  viewport.cpp  viewport.h
rattlesmake-library/rattlesmake-services-library/: CMakeLists.txt  fileservice.cpp  fileservice.h  zipservice.cpp  zipservice.h
rattlesmake-library/rattlesmake-utils-library/: CMakeLists.txt  encode_utils.cpp  encode_utils.h  math_utils.cpp  math_utils.h  new_shader.cpp  new_shader.h  stl_utils.cpp  stl_utils.h
test/: CMakeLists.txt  main.cpp  readme.txt
tool-pathfinding/: CMakeLists.txt  main.cpp
tool-terrain/: CMakeLists.txt  main.cpp
tool-terrain/exe-root-content/shaders/: terrain_fragment_shader.glsl  terrain_geometry_shader.glsl  terrain_tess_control_shader.glsl  terrain_tess_eval_shader.glsl  terrain_vertex_shader.glsl
(+357 files in other folders)
